# merlin-epu-sim

./: .gitignore  beam.py  correction.py  do_calc.py  field.py  model.py  mono.py  optics.py  pyproject.toml  reference.py  spectrum.py  trajectory.py  visualize_qp_shortening.py  xarray_io.py
optical_constants/: C_Hagemann_nk.csv  Si_Franta_20C_nk.csv
